--- a/HTML_site/Contact.html
+++ b/HTML_site/Contact.html
@@ -4,11 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Contact</title>
+	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
 <h2>Write me a letter!</h2>
-
-<form action="/submit" method="post">
+<div class="form">
+<form action="/submit" method="post" class="formlogin">
 	<label for="name"> Your name </label><br>
 	<input type="text" id="name" name="name"><br><br>
 
@@ -21,8 +22,8 @@
 <button type="submit"> Send </button> <br>
 
 </form>
-
-<a href="My site.html">Back to home page </a>
+</div>
+<a href="My site.html" class="home">Back to home page </a>
 
 </body>
 </html>
