--- a/HTML_site/My galllery.html
+++ b/HTML_site/My galllery.html
@@ -4,14 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My gallery</title>
+	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
-<h2>Photo from my life</h2>
-<img src="C:\Hillel_2025\Guevskaya_Oleksandra\HTML_site\Image\2.jpg" width="200">
-<img src="C:\Hillel_2025\Guevskaya_Oleksandra\HTML_site\Image\3.jpg" width="200">
-<img src="C:\Hillel_2025\Guevskaya_Oleksandra\HTML_site\Image\4.jpg" width="200"> <br>
+<h2>Photo from my life</h2> <br>
+<img src="C:\Hillel_2025\Guevskaya_Oleksandra\HTML_site\Image\2.jpg" width="200" style="display: block; margin: 0 auto; border: 9px solid green;"> <br>
+<img src="C:\Hillel_2025\Guevskaya_Oleksandra\HTML_site\Image\3.jpg" width="200" style="display: block; margin: 0 auto; border: 9px solid green;"> <br>
+<img src="C:\Hillel_2025\Guevskaya_Oleksandra\HTML_site\Image\4.jpg" width="200" style="display: block; margin: 0 auto; border: 9px solid green;"> <br>
 
-<a href="My site.html">Back to home page </a>
+<a href="My site.html" class="home">Back to home page </a>
 
 </body>
 </html>
